--- a/app/src/main/res/layout/activity_atur_komisi_jasa_lain_.xml
+++ b/app/src/main/res/layout/activity_atur_komisi_jasa_lain_.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:descendantFocusability="beforeDescendants"
-    android:focusableInTouchMode="true">
+    android:focusableInTouchMode="true"
+    android:background="@android:color/white">
 
     <ScrollView
         android:layout_width="match_parent"
