--- a/app/src/main/res/layout/item_komisi_part.xml
+++ b/app/src/main/res/layout/item_komisi_part.xml
@@ -11,7 +11,7 @@
     android:layout_marginBottom="4dp"
     android:layout_weight="5"
     android:padding="10dp"
-    app:cardCornerRadius="10dp"
+    app:cardCornerRadius="5dp"
     app:cardElevation="2dp">
 
     <TableLayout
@@ -23,12 +23,13 @@
         <TableRow>
 
             <TextView
-                android:id="@+id/tv_posisi_komisiPart"
+                android:id="@+id/tv_nama_group_part"
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
-                android:text="Posisi"
+                android:text="@string/nama_group_part"
                 android:layout_gravity="start"
-                android:textSize="12sp"
+                android:textSize="13sp"
+                android:textStyle="bold"
                 android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>
 
         </TableRow>
@@ -36,12 +37,13 @@
         <TableRow android:layout_marginTop="10dp">
 
             <TextView
-                android:id="@+id/tv_namaPart_komisiPart"
+                android:id="@+id/tv_aktivitas_layanan"
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="start"
-                android:text="Nama Part"
-                android:textSize="12sp"
+                android:text="@string/aktivitas_layanan"
+                android:textSize="13sp"
+                android:textStyle="bold"
                 android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>
 
         </TableRow>
@@ -49,21 +51,23 @@
         <TableRow android:layout_marginTop="10dp">
 
             <TextView
-                android:id="@+id/tv_discPart_komisiPart"
+                android:id="@+id/tv_komisi_percent"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="% Part"
+                android:text="@string/komisi"
                 android:layout_gravity="start"
                 android:textSize="12sp"
+                android:textStyle="bold"
                 android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>
 
             <TextView
-                android:id="@+id/tv_discJasa_komisiPart"
+                android:id="@+id/tv_status"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="% Jasa"
+                android:text="@string/status"
                 android:layout_gravity="end"
                 android:textSize="12sp"
+                android:textStyle="bold"
                 android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>
 
         </TableRow>
