--- a/app/src/main/res/layout/activity_atur_komisi_layanan_.xml
+++ b/app/src/main/res/layout/activity_atur_komisi_layanan_.xml
@@ -84,6 +84,7 @@
 
             <android.support.design.widget.TextInputLayout
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:id="@+id/tl_komisilayanan_percent"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp">
