--- a/app/src/main/res/layout/item_komisi_layanan.xml
+++ b/app/src/main/res/layout/item_komisi_layanan.xml
@@ -23,15 +23,15 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/tv_posisi_komisiLayanan"
+            android:id="@+id/tv_layanan_komisiLayanan"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Posisi"
+            android:text="Layanan"
             android:textSize="12sp"
             android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>
 
         <TextView
-            android:id="@+id/tv_layanan_komisiLayanan"
+            android:id="@+id/tv_nama_komisiLayanan"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="7dp"
@@ -39,14 +39,34 @@
             android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
             android:textSize="12sp" />
 
-        <TextView
-            android:id="@+id/tv_komisi_komisiLayanan"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="% Komisi"
-            android:layout_marginTop="7dp"
-            android:textSize="12sp"
-            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tv_komisi_komisiLayanan"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="% Komisi"
+                android:layout_marginTop="7dp"
+                android:textSize="12sp"
+                android:layout_weight="1"
+                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>
+
+            <TextView
+                android:id="@+id/tv_status_komisiLayanan"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Status"
+                android:layout_marginTop="7dp"
+                android:textSize="12sp"
+                android:gravity="right"
+                android:layout_weight="1"
+                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>
+
+        </LinearLayout>
+
 
     </LinearLayout>
 
