--- a/app/src/main/res/layout/item_kontrol_layanan.xml
+++ b/app/src/main/res/layout/item_kontrol_layanan.xml
@@ -155,7 +155,7 @@
                     card_view:ignore="RtlSymmetry" />
 
                 <TextView
-                    android:id="@+id/tv_estimasi"
+                    android:id="@+id/tv_waktu_status"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="DD/MM-HH:MM"
