--- a/app/src/main/res/layout/activity_atur_komisi_part.xml
+++ b/app/src/main/res/layout/activity_atur_komisi_part.xml
@@ -44,6 +44,7 @@
                         android:id="@+id/sp_aktifitas"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:gravity="center"
                         android:textAlignment="center" />
 
                 </RelativeLayout>
