--- a/app/src/main/res/layout/item_part_booking3_checkin3.xml
+++ b/app/src/main/res/layout/item_part_booking3_checkin3.xml
@@ -14,10 +14,21 @@
     app:cardElevation="2dp"
     app:cardCornerRadius="10dp">
 
+    <View
+        android:id="@+id/tv_mark_tambah_jasa"
+        android:layout_width="70dp"
+        android:layout_height="20dp"
+        android:layout_gravity="start"
+        android:background="@drawable/arrows_left"
+        android:textStyle="bold"
+        android:textColor="@color/red_900"
+        android:textSize="17sp"/>
+
     <FrameLayout
         android:id="@+id/ly_parts"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:padding="10dp">
 
         <ImageButton
             android:id="@+id/img_delete"
@@ -29,7 +40,6 @@
             android:background="@android:color/transparent"
             android:tint="@color/grey_80"
             app:srcCompat="@drawable/ic_close"
-            android:visibility="gone"
             card_view:ignore="ContentDescription,RtlSymmetry" />
 
         <LinearLayout
