--- a/app/src/main/res/layout/activity_checkin1_.xml
+++ b/app/src/main/res/layout/activity_checkin1_.xml
@@ -194,8 +194,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical|right"
-                        android:layout_marginRight="20dp"
-                        android:visibility="gone" />
+                        android:visibility="gone"
+                        android:layout_marginRight="20dp" />
 
                 </FrameLayout>
 
